package : fix alignment, fix sidebar

--- a/src/public/less/components/package-sidemenu.less
+++ b/src/public/less/components/package-sidemenu.less
@@ -1,6 +1,6 @@
 .c-package-sidemenu {
+	position: relative;
 	.package-stats {
-		position: relative;
 		padding: 32px;
 		font-size: 14px;
 		line-height: 20px;
@@ -41,8 +41,9 @@
 
 			&.top {
 				display: block;
-				top: -20px;
-				left: -16px;
+				inset: 0;
+				// top: -20px;
+				// left: -16px;
 			}
 		}
 
