--- a/src/public/less/components/search-compact.less
+++ b/src/public/less/components/search-compact.less
@@ -85,7 +85,7 @@
 		text-align: center;
 	}
 
-	.c-package {
+	.c-package-header-wrapper {
 		border-bottom: 1px solid #dfe3e7;
 		padding: 16px 0;
 	}
