--- a/src/public/less/pages/package.less
+++ b/src/public/less/pages/package.less
@@ -1,6 +1,12 @@
 .p-package {
 	padding: 0;
 
+	>.c-slider {
+		overflow: hidden;
+		display: flex;
+		flex-direction: column;
+	}
+
 	.c-package {
 		padding: 32px 0 0;
 
@@ -8,10 +14,6 @@
 		@media (max-width: @screen-xs-max) {
 			margin-bottom: 40px;
 		}	
-	}
-
-	.c-slider {
-		overflow: hidden;
 	}
 
 	.package-not-found {
